objects/OPP_Project__c.object
<CustomObject>
    <fields>
        <fullName>AccountGrowthInitiative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Growth Initiative</label>
        <referenceTo>AccountGrowthInitiative__c</referenceTo>
        <relationshipLabel>Master Projects</relationshipLabel>
        <relationshipName>MasterProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountryofDestination__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Defaults to the country of the user who created the record and can be changed.</description>
        <label>Country of Destination</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Master Projects</relationshipLabel>
        <relationshipName>Customer_Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EstimateProjectCloseDate__c</fullName>
        <description>Indicate the most advanced close  date of the opportunities
NB: Initially expected close date if the project. This field will not be automatically calculated.</description>
        <inlineHelpText>The date by which all of the related Opportunities are expected to be closed.</inlineHelpText>
        <label>Estimated Project Close Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IndustryPSICount__c</fullName>
        <label>IndustryPSICount</label>
        <summaryFilterItems>
            <field>OPP_ProjectSpecificInformation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Industry - Process Automation</value>
        </summaryFilterItems>
        <summaryForeignKey>OPP_ProjectSpecificInformation__c.MasterProject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of the Master Project</description>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketSegment__c</fullName>
        <label>Market Segment (Master Project)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BD1</fullName>
                </value>
                <value>
                    <fullName>BD3</fullName>
                </value>
                <value>
                    <fullName>BD4</fullName>
                </value>
                <value>
                    <fullName>BD6</fullName>
                </value>
                <value>
                    <fullName>BD9</fullName>
                </value>
                <value>
                    <fullName>BDR</fullName>
                </value>
                <value>
                    <fullName>BDZ</fullName>
                </value>
                <value>
                    <fullName>EN1</fullName>
                </value>
                <value>
                    <fullName>EN2</fullName>
                </value>
                <value>
                    <fullName>EN3</fullName>
                </value>
                <value>
                    <fullName>ID1</fullName>
                </value>
                <value>
                    <fullName>ID2</fullName>
                </value>
                <value>
                    <fullName>ID3</fullName>
                </value>
                <value>
                    <fullName>ID4</fullName>
                </value>
                <value>
                    <fullName>ID5</fullName>
                </value>
                <value>
                    <fullName>ID6</fullName>
                </value>
                <value>
                    <fullName>ID7</fullName>
                </value>
                <value>
                    <fullName>IDZ</fullName>
                </value>
                <value>
                    <fullName>IT1</fullName>
                </value>
                <value>
                    <fullName>IT2</fullName>
                </value>
                <value>
                    <fullName>IT3</fullName>
                </value>
                <value>
                    <fullName>PW1</fullName>
                </value>
                <value>
                    <fullName>PW3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MasterProjectSummaryReport__c</fullName>
        <formula>HYPERLINK(&quot;../00O12000006FNR3?pv0=&quot;&amp;Id,&quot;Click here to display the report&quot;)</formula>
        <label>Master Project Summary Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectDescription__c</fullName>
        <description>This is a free-text field to provide a location for the user to better describe the project</description>
        <label>Master Project Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProjectEndUserInvestor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The user should input the name of the end user account and can change it during the life cycle of the project</description>
        <inlineHelpText>Select the &quot;End User account&quot; which will ultimately use the Schneider Electric offers for this Master Project. If the End User is not yet known, select the Account who is leading the project and update the field once the End User is known.</inlineHelpText>
        <label>Master Project End User-Investor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Master Projects</relationshipLabel>
        <relationshipName>Master_Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectID__c</fullName>
        <description>This ID is assigned by the system as a unique number and cannot be changed by the user.  It  will appear in the popup that comes when you hover over the name of the master project name who will appear as a hyperlink  the related</description>
        <displayFormat>PROJ-{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Master Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProjectLocalName__c</fullName>
        <description>To keep Local name of Master Project</description>
        <inlineHelpText>The Master Project Local Name is intended for users whose countries use English as a second language. Capture the name of the project in the local language to improve search to options.</inlineHelpText>
        <label>Master Project Local Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNamingConvention__c</fullName>
        <defaultValue>&quot;Project Name - End user Investor - Location&quot; &amp; BR() &amp; &quot; e.g.: Praha Airport - Airport Authority - Praha&quot;</defaultValue>
        <label>Master Project Naming Convention</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectStatus__c</fullName>
        <description>This field indicate the phase in which the project is and contains 3 picklist values: Open, On-hold, Completed</description>
        <inlineHelpText>Upon creation of the record, the status is Open. Select On-hold to reflect a customer related project delay.  Select Completed when all of the related Opportunities have been closed.</inlineHelpText>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>On-hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RefreshAmount__c</fullName>
        <formula>IF(Tech_AmoutUpdateByBatch__c,
HYPERLINK(
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
+ &apos;apex/VFP_CalculateProjectAmt?Id=&apos;+Id ,
&apos;Click Here to Refresh Amount&apos;),&apos;&apos;)</formula>
        <label>&lt;Refresh Amount&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEPotentialProjectAmount__c</fullName>
        <inlineHelpText>The Potential Accessible Market (PAM) for Schneider Electric within this Master Project</inlineHelpText>
        <label>SE Potential Project Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SumOfAllOpportunities__c</fullName>
        <description>This will be the sum of the values of all the opportunities linked to the record which are Included in Reporting</description>
        <inlineHelpText>The total amount of all related Opportunities where Included in Reporting is Yes. The amount includes the sum of all Opportunities (Open + Won + Lost + Cancelled).  It indicates the SE coverage &amp; saturation.</inlineHelpText>
        <label>Sum of all Opportunities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tech_AmoutUpdateByBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used in the daily batch job to update the &quot;Sum of all Opportunities&quot; and &quot;Total Project Amount (Forecast+Won)&quot; fields. The checkbox will be checked 
1.  If the customer project currency is changed.
2. If the Forecast category or Amount of the opportunity is changed and linked to Master Project.
3. If the Master Project changed on the Opportunity, then this checkbox will be checked both on the old and new Master Project.</description>
        <label>Tech_AmoutUpdateByBatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_EndUserInvestorCountry__c</fullName>
        <label>End User-Investor Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_SumOfCancelledOpportunities__c</fullName>
        <description>Sum of Cancelled Opportunities in the hierarchy</description>
        <label>Sum of Cancelled Opportunities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tech_SumOfLostOpportunities__c</fullName>
        <description>Sum of Lost Opportunities in the hierarchy</description>
        <label>Sum of Lost Opportunities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tech_SumOfOpenOpportunities__c</fullName>
        <description>Sum of Open Opportunities in the hierarchy</description>
        <label>Sum of Open Opportunities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tech_SumOfWonOpportunities__c</fullName>
        <description>Sum of Won Opportunities in the hierarchy</description>
        <label>Sum of Won Opportunities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProjectAmountForecastedWon__c</fullName>
        <inlineHelpText>The total amount of related Opportunities where Included in Reporting is Yes. The amount includes the sum of Open and Won Opportunities.</inlineHelpText>
        <label>Total Project Amount (Forecasted+Won)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProjectInvestmentAmount__c</fullName>
        <description>This field represents the value of the CAPEX</description>
        <inlineHelpText>The total capital expenditure of the customer investment in this Master Project.</inlineHelpText>
        <label>Total Project Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VIPIcon__c</fullName>
        <formula>ProjectEndUserInvestor__r.Account_VIPIcon__c</formula>
        <label>&lt;VIPIcon&gt;</label>
        <type>Text</type>
    </fields>
    <label>Master Project</label>
    <listViews>
        <fullName>AR_Master_Projects_APU</fullName>
        <columns>NAME</columns>
        <columns>ProjectEndUserInvestor__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>EstimateProjectCloseDate__c</columns>
        <columns>SumOfAllOpportunities__c</columns>
        <columns>TotalProjectAmountForecastedWon__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CountryofDestination__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryofDestination__c</field>
            <operation>equals</operation>
            <value>Argentina,Uruguay,Paraguay</value>
        </filters>
        <label>AR - Master Projects APU</label>
        <language>en_US</language>
        <sharedTo>
            <group>ARArgentina</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_Mis_Master_Projects</fullName>
        <columns>NAME</columns>
        <columns>ProjectEndUserInvestor__c</columns>
        <columns>VIPIcon__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>EstimateProjectCloseDate__c</columns>
        <columns>SumOfAllOpportunities__c</columns>
        <columns>TotalProjectAmountForecastedWon__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CountryofDestination__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>AR - Mis Master Projects Abiertos</label>
        <language>en_US</language>
        <sharedTo>
            <group>ARArgentina</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AR_Mis_Master_Projects_Cerrados</fullName>
        <columns>NAME</columns>
        <columns>ProjectEndUserInvestor__c</columns>
        <columns>VIPIcon__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>EstimateProjectCloseDate__c</columns>
        <columns>SumOfAllOpportunities__c</columns>
        <columns>TotalProjectAmountForecastedWon__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CountryofDestination__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>AR - Mis Master Projects Cerrados</label>
        <language>en_US</language>
        <sharedTo>
            <group>ARArgentina</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AT_ALL_Master_Projects_in_Austria</fullName>
        <columns>NAME</columns>
        <columns>ProjectEndUserInvestor__c</columns>
        <columns>CountryofDestination__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>TotalProjectAmountForecastedWon__c</columns>
        <columns>SumOfAllOpportunities__c</columns>
        <columns>EstimateProjectCloseDate__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>VIPIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>CountryofDestination__c</field>
            <operation>equals</operation>
            <value>Austria</value>
        </filters>
        <label>AT-open Master Projects in Austria</label>
        <language>en_US</language>
        <sharedTo>
            <group>ATallUsersSEAustria</group>
            <group>CHAllUsers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AU_Master_Projects</fullName>
        <columns>NAME</columns>
        <columns>ProjectID__c</columns>
        <columns>CountryofDestination__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>EstimateProjectCloseDate__c</columns>
        <columns>ProjectEndUserInvestor__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>SumOfAllOpportunities__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryofDestination__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>AU Master Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>PZ_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProjectEndUserInvestor__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ProjectStatus__c</columns>
        <columns>TotalProjectAmountForecastedWon__c</columns>
        <columns>EstimateProjectCloseDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tech_EndUserInvestorCountry__c</field>
            <operation>equals</operation>
            <value>Algeria</value>
        </filters>
        <label>DZ Master Project</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BE_ALL_Open_Master_Projects1</fullName>
        <columns>NAME</columns>
        <columns>ProjectEndUserInvestor__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>TotalProjectAmountForecastedWon__c</columns>
        <columns>SEPotentialProjectAmount__c</columns>
        <columns>EstimateProjectCloseDate__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryofDestination__c</field>
            <operation>equals</operation>
            <value>belgium</value>
        </filters>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>equals</operation>
            <value>Open,On-hold</value>
        </filters>
        <label>BE_ALL Open Master Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>BE_ALL_USERS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_ALL_open_Master_Projects</fullName>
        <columns>NAME</columns>
        <columns>ProjectEndUserInvestor__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>ProjectDescription__c</columns>
        <columns>TotalProjectAmountForecastedWon__c</columns>
        <columns>SEPotentialProjectAmount__c</columns>
        <columns>EstimateProjectCloseDate__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryofDestination__c</field>
            <operation>equals</operation>
            <value>belgium</value>
        </filters>
        <label>BE_ALL Master Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>BE_ALL_USERS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CH_ALL_Master_Projects_in_Switzerland</fullName>
        <columns>NAME</columns>
        <columns>ProjectEndUserInvestor__c</columns>
        <columns>CountryofDestination__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>TotalProjectAmountForecastedWon__c</columns>
        <columns>SumOfAllOpportunities__c</columns>
        <columns>EstimateProjectCloseDate__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>VIPIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>CountryofDestination__c</field>
            <operation>equals</operation>
            <value>Switzerland,Liechtenstein</value>
        </filters>
        <label>CH-open Master Projects in Switzerland</label>
        <language>en_US</language>
        <sharedTo>
            <group>ATallUsersSEAustria</group>
            <group>CHAllUsers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CH_open_Master_Projects_Central</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>ProjectDescription__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>SumOfAllOpportunities__c</columns>
        <columns>Tech_SumOfOpenOpportunities__c</columns>
        <columns>TotalProjectAmountForecastedWon__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Andre Blatter,Matthias Kaufmann,Gian Franco Curcio,Thomas Hugi,Thomas Graf</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>David Sevinc,Reto Suter,Guillaume Dubois,Mario Spoerri</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Stephan Boss,Andreas von Ah,Yves Ritter,Iwan Loertscher</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Bernhard Kiechl</value>
        </filters>
        <label>CH-Center Master Projects open</label>
        <language>en_US</language>
        <sharedTo>
            <group>ATallUsersSEAustria</group>
            <group>CHAllUsers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CZ_SK_Master_Projects</fullName>
        <columns>NAME</columns>
        <columns>EstimateProjectCloseDate__c</columns>
        <columns>MarketSegment__c</columns>
        <columns>ProjectEndUserInvestor__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>Tech_SumOfOpenOpportunities__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryofDestination__c</field>
            <operation>equals</operation>
            <value>czech republic,slovakia</value>
        </filters>
        <label>CZ&amp;SK_Master Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>CZ_SK_All_Users</group>
            <group>CZ_SK_All_sales_users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DE_Alle_Master_Projects_in_Deutschland</fullName>
        <columns>NAME</columns>
        <columns>ProjectEndUserInvestor__c</columns>
        <columns>CountryofDestination__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>TotalProjectAmountForecastedWon__c</columns>
        <columns>SumOfAllOpportunities__c</columns>
        <columns>EstimateProjectCloseDate__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>VIPIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryofDestination__c</field>
            <operation>equals</operation>
            <value>ITALY</value>
        </filters>
        <label>Italy - All Master Project</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>IT1</roleAndSubordinates>
            <roleAndSubordinates>IT_ENE2</roleAndSubordinates>
            <roleAndSubordinates>IT_IND2</roleAndSubordinates>
            <roleAndSubordinates>IT_PTN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DE_Alle_offenen_Master_Projects</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>SEPotentialProjectAmount__c</columns>
        <columns>TotalProjectAmountForecastedWon__c</columns>
        <columns>SumOfAllOpportunities__c</columns>
        <columns>NAME</columns>
        <columns>ProjectEndUserInvestor__c</columns>
        <columns>CountryofDestination__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EstimateProjectCloseDate__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>VIPIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Tech_EndUserInvestorCountry__c</field>
            <operation>equals</operation>
            <value>Germany</value>
        </filters>
        <filters>
            <field>CountryofDestination__c</field>
            <operation>equals</operation>
            <value>Germany</value>
        </filters>
        <label>DE - Alle offenen Master Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>DE_Central_Functions_Read_Only</group>
            <group>EUSDelegatedAdminGermany</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DE_Meine_offenen_Master_Projects</fullName>
        <columns>NAME</columns>
        <columns>ProjectEndUserInvestor__c</columns>
        <columns>CountryofDestination__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>TotalProjectAmountForecastedWon__c</columns>
        <columns>SumOfAllOpportunities__c</columns>
        <columns>EstimateProjectCloseDate__c</columns>
        <columns>ProjectStatus__c</columns>
        <columns>VIPIcon__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ProjectStatus__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>DE - Meine offenen Master Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>DE_Central_Functions_Read_Only</group>
            <group>EUSDelegatedAdminGermany</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DK_All_Master_Projects</fullName>
        <columns>NAME</columns>
        <columns>ProjectEndUserInvestor__c</columns>
        <columns>CountryofDestination__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ProjectStatus__c</columns>
        <columns>TotalProjectAmountForecastedWon__c</columns>
        <columns>EstimateProjectCloseDate__c</columns>
        <columns>VIPIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryofDestination__c</field>
            <operation>equals</operation>
            <value>DK,Denmark</value>
        </filters>
        <label>DK - All Master Projects</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>DK1</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Master Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Projects</pluralLabel>
    <recordTypes>
        <fullName>Completed</fullName>
        <active>true</active>
        <description>Record type for Completed Master Project</description>
        <label>Completed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open</fullName>
        <active>true</active>
        <description>Recordtype for incomplete Master Project</description>
        <label>Open</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>GrantAccessToProjectTeam__c</fullName>
        <label>Grant Access To Project Team</label>
    </sharingReasons>
    <validationRules>
        <fullName>OPP_PRJ_VR_MAR16SLS01_MandatoryFields</fullName>
        <active>true</active>
        <description>Make fields mandatory in VR as well not just in layouts, inorder to ensure connectors as well pass data</description>
        <errorConditionFormula>AND(
	NOT( $User.BypassVR__c),
	OR(
		ISBLANK(ProjectEndUserInvestor__c),
		ISBLANK(CountryofDestination__c), 
		ISBLANK(TEXT(ProjectStatus__c)),
		ISBLANK(EstimateProjectCloseDate__c),
		ISBLANK(TEXT(MarketSegment__c)), 
		ISBLANK(SEPotentialProjectAmount__c) 
	)	
)</errorConditionFormula>
        <errorMessage>Please review the Master Project and fill all required fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPP_PRJ_VR_OCT15SLS01_EndUserControl</fullName>
        <active>true</active>
        <description>Ensures that the Account has not been marked for deletion</description>
        <errorConditionFormula>NOT($User.BypassVR__c) &amp;&amp; (ISNEW() || ISCHANGED( ProjectEndUserInvestor__c)) &amp;&amp; (  ProjectEndUserInvestor__r.ToBeDeleted__c  = TRUE )</errorConditionFormula>
        <errorDisplayField>ProjectEndUserInvestor__c</errorDisplayField>
        <errorMessage>A Master Project cannot be created for a To Be Deleted/Merged account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPP_PRJ_VR_OCT15SLS03_NonNegativeAmt</fullName>
        <active>true</active>
        <description>Display an error message when the user enters a negative value for Amount</description>
        <errorConditionFormula>NOT( $User.BypassVR__c ) 
&amp;&amp; ( SEPotentialProjectAmount__c &lt;0 ||  TotalProjectInvestmentAmount__c &lt;0 )</errorConditionFormula>
        <errorMessage>Please enter non-negative numbers for Amount</errorMessage>
    </validationRules>
</CustomObject>